<resources>
    <string name="app_name">Kwizee</string>
    <string name="signin_with_google">Login With Google</string>
    <string name="before_anything_else_preparation_is_nthe_key_to_success">Before anything else,preparation is \nthe key to success</string>
    <string name="play_to_gain_your_knowledge">Play to gain your knowledge</string>
    <string name="_2_minutes">1 Minutes</string>
    <string name="per_question">Per Question</string>
    <string name="multiple_choice_questions">Multiple Choice Questions</string>
    <string name="_15">10</string>
    <string name="_90">90%</string>
    <string name="for_badge">For Badge</string>
    <string name="start_test">Start Test</string>
    <string name="before_you_start_n_n_you_must_complete_this_test_in_one_session_make_sure_your_internet_is_reliable_n_n_1_mark_awarded_for_a_correct_answer_no_negative_marking_will_be_there_for_wrong_answer_n_n_more_you_give_the_correct_answer_more_chance_to_win_the_badge_n_n_if_you_don_t_earn_a_badge_this_time_you_can_retake_this_test_once_more">Before you start\n\n • You must complete this test in one session - make sure your internet is reliable. \n\n• 1 mark awarded for a correct answer. No negative marking will be there for wrong answer. \n\n• More you give the correct answer more chance to win the badge. \n\n• If you don\'t earn a badge this time, you can retake this test once more.</string>
    <string name="start_quiz">Start Quiz</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>