<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizList">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar2"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleMarginEnd="?attr/actionBarSize"
            app:title="name" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/questions" />

            <LinearLayout
                android:id="@+id/linearLayoutInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="@string/_15"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/protestriotregular"
                    android:text="@string/multiple_choice_questions"
                    android:textColor="@color/darkgrey"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/timerImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/timer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="@string/_2_minutes"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/protestriotregular"
                    android:text="@string/per_question"
                    android:textColor="@color/darkgrey"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/badgeImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/medal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoslabregular"
                    android:text="@string/_90"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/protestriotregular"
                    android:text="@string/for_badge"
                    android:textColor="@color/darkgrey"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/darkgrey"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslabregular"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:text="@string/before_you_start_n_n_you_must_complete_this_test_in_one_session_make_sure_your_internet_is_reliable_n_n_1_mark_awarded_for_a_correct_answer_no_negative_marking_will_be_there_for_wrong_answer_n_n_more_you_give_the_correct_answer_more_chance_to_win_the_badge_n_n_if_you_don_t_earn_a_badge_this_time_you_can_retake_this_test_once_more"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/layout_button"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotoslabregular"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/start_quiz"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>